<resources>
    <string name="app_name">GSTestAll</string>
    <string-array name="menu">
        <item>1.我的账户</item>
        <item>5,6,7环境指标</item>
        <item>13.路况查询</item>
        <item>8.出行管理</item>
        <item>3.账单管理</item>
        <item>10.公交查询</item>
        <item>25.路况查询2</item>
        <item>31.意见反馈</item>
        <item>2.红绿灯管理</item>
        <item>4.车辆违章</item>
        <item>38.定制班车</item>
        <item>27.生活助手</item>
        <item>33.高速路况</item>
        <item>35.旅行信息</item>
        <item>60.我的订阅</item>
        <item>63.旅行助手</item>
        <item>17.数据分析</item>
        <item>42.停车场</item>
        <item>62.违章类型分析</item>
        <item>49.WEBVIEW</item>
    </string-array>

    <string name="temp">温度：%1$d°C</string>
    <string name="hum">相对湿度：%1$d％</string>
    <string name="pm">PM2.5：%1$dμg/m³</string>

    <string name="road1">一号道路：%1$s</string>
    <string name="road2">二号道路：%1$s</string>
    <string name="road3">三号道路：%1$s</string>

    <string name="feed_title">标题：%1$s</string>
    <string name="feed_state">状态：%1$s</string>
    <string name="feed_hfContent">回复内容：%1$s</string>
    <string name="feed_hfTime">回复时间：%1$s</string>
    <string name="feed_submitTime">提交时间：%1$s</string>
    <string name="cs_money">票价：%1$d元</string>
    <string name="cs_mileage">里程：%1$dkm</string>

    <string-array name="station">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
