<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1">


            <TextView
                android:id="@+id/item_feed_title"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/feed_title"
                android:textSize="25sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/item_feed_state"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/feed_state"
                android:textSize="25sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/item_feed_hfContent"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/feed_hfContent"
                android:textSize="25sp"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >


            <TextView
                android:id="@+id/item_feed_submitTime"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/feed_submitTime"
                android:textSize="25sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/item_feed_hfTime"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/feed_hfTime"
                android:textSize="25sp"
                android:gravity="center"/>
        </TableRow>

    </TableLayout>
</LinearLayout>
